--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #059669;
     --darker-color: #064E3B;
-    --light-green: #A7F3D0;
+    --light-green: #f1e100;
 }
 
 body {
