--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap');
 
 :root {
-    --primary-color: #059669;
-    --darker-color: #064E3B;
+    --primary-color: #05fc3a;
+    --darker-color: #143ffa;
     --light-green: #f1e100;
 }
 
